<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">RSS Twitter Notifier</string>
    <string name="title_activity_rss_message">Messages</string>

    <!-- Defined strings -->
    <string name="title_activity_settings">Settings</string>

    <!-- UI strings -->
    <string name="not_logged">Please log in to use this application properly.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="twitter_login">Login to twitter</string>
    <string name="twitter_logout">Logout from twitter</string>
    <string name="add_new_rss_feed">Add RSS Feed</string>
    <string name="search_messages">Search messages</string>
    <string name="log_in">Log in</string>
    <string name="search_rss_feed_hint">Type a name of rss feed</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>
    <string name="tweet_message">Tweet it!</string>
    <string name="help">Help</string>

    <!-- Settings -->
    <string name="new_tweets_checking_question">How often to check new messages from channels?</string>
    <string name="beep_signal">Use signal to notify about new tweets</string>
    <string name="publish_on_twitter">Publish new messages on twitter</string>
    <string name="how_old_messages_show">How old messages show ? (in days) </string>

    <!-- Toast messages -->
    <string name="io_error">There was a problem with your url (maybe it is not a valid url)</string>
    <string name="xml_parsing_error">There was a problem with parsing url.</string>
    <string name="bad_rss_from_url">This is not RSS feed.</string>
    <string name="successfully_logged_in">Successfully logged in.</string>
    <string name="successfully_logged_out">Successfully logged out</string>
    <string name="already_logged_in">You are already logged in!</string>
    <string name="log_in_required">You have to been logged in</string>
    <string name="update_feed">Update feed: </string>
    <string name="title_activity_message_filter">MessageFilterActivity</string>
    <string name="successful_tweet_message">You have successfully tweeted your message</string>
    <string name="unsuccessful_tweet_message">Some error occurred. Check you twitter session,
        Internet connection or status is duplicate.</string>
    <string name="rss_feed_duplicate">You have already followed this feed</string>
    
    <string name="help_description">In order to use this application login to your Twitter account.
        If you want to add new RSS channal, press + and type RSS URL address you want to follow.
        If you want to delete some channel, long click and press Delete option.\n\n
        
        Just click an interesting RSS channel to see all associated messages with it.
        You can filter them changing period of time you are interested pressing Filter option.\n\n
        
        If you want to tweet some message on your twitter account long click
        and select Tweet it!</string>

</resources>
